--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -1,2 +1,22 @@
 <%- include('header.ejs') -%>
+    <div class="row justify-content-center h-100">
+        <div class="col-xl-3 col-lg-4 col-md-5 col-sm-6 col-xs-6 align-self-center">
+            <div class="card text-center">
+                <div class="card-title" id="login-card">
+                    <h5>Multitude</h5>
+                </div>
+                <div class="card-body">
+                    <form>
+                        <div class="form-group">
+                            <input type="text" name="username" placeholder="username"/>
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="password" placeholder="password"/>
+                        </div>
+                        <button type="submit" class="btn btn-dark">Login</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 <%- include('footer.ejs') -%>
