--- a/Views/login.ejs
+++ b/Views/login.ejs
@@ -1,4 +1,4 @@
-<%- include('header.ejs') -%>
+<%- include('partials/header.ejs') -%>
     <div class="row justify-content-center h-100">
         <div class="col-xl-3 col-lg-4 col-md-5 col-sm-6 col-xs-6 align-self-center">
             <div class="card text-center">
@@ -19,4 +19,4 @@
             </div>
         </div>
     </div>
-<%- include('footer.ejs') -%>
+<%- include('partials/footer.ejs') -%>
