--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,3 +15,11 @@ body {
 .card-title h5 {
     padding-top: 10px;
 }
+
+.navbar {
+    background-color: #647687;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+    color: #FFFFFF;
+}
