Add manage users, scans, and scanners. Modify static folder to work with subpaths.

--- a/Views/assets.ejs
+++ b/Views/assets.ejs
@@ -32,7 +32,7 @@
             <tbody>
     <% assets.forEach(function(asset) { %>
                 <tr>
-                    <th scope="row"><span class="text-nowrap"><input type="checkbox"/></span></td>
+                    <td><span class="text-nowrap"><input type="checkbox"/></span></td>
                     <td><span class="text-nowrap"><%= asset.name %></span></td>
                     <td><span class="text-nowrap"><%= asset.address %></span></td>
                     <td><span class="text-nowrap"><%= asset.os %></span></td>
