--- a/Views/partials/navbar.ejs
+++ b/Views/partials/navbar.ejs
@@ -1,6 +1,6 @@
     
     <nav class="navbar navbar-expand-md navbar-dark">
-        <a class="navbar-brand" href="/"><img src="images/all_inclusive-white-18dp.svg" /></a>
+        <a class="navbar-brand" href="/"><img src="/static/images/all_inclusive-white-18dp.svg" /></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarItems" aria-controls="navbarItems" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -17,16 +17,16 @@
                         Manage
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMgmt">
-                        <a class="dropdown-item" href="#">Scanners</a>
-                        <a class="dropdown-item" href="#">Scans</a>
-                        <a class="dropdown-item" href="#">Users</a>
+                        <a class="dropdown-item" href="/manage/scanners">Scanners</a>
+                        <a class="dropdown-item" href="/manage/scans">Scans</a>
+                        <a class="dropdown-item" href="/manage/users">Users</a>
                     </div>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownAcct" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <img src="images/account_box-white-18dp.svg" />
+                        <img src="/static/images/account_box-white-18dp.svg" />
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropwdownAcct">
                         <a class="dropdown-item" href="#">Logout</a>
