Change assets page name to hostname.

--- a/Views/assets.ejs
+++ b/Views/assets.ejs
@@ -22,7 +22,7 @@
             <thead>
                 <tr>
                     <th scope="col"><span class="text-nowrap"><input type="checkbox"/></span></th>
-                    <th scope="col"><span class="text-nowrap">Name</span></th>
+                    <th scope="col"><span class="text-nowrap">Hostname</span></th>
                     <th scope="col"><span class="text-nowrap">Address</span></th>
                     <th scope="col"><span class="text-nowrap">OS</span></th>
                     <th scope="col"><span class="text-nowrap">Last Scan</span></th>
