--- a/Views/scanners.ejs
+++ b/Views/scanners.ejs
@@ -6,7 +6,54 @@
             <div class="col">
                 <h2>Manage Scanners</h2>
             </div>
-            <div class="col-offset-1 mx-5">
+            <div class="col-offset-1 mr-2">
+                <button class="btn btn-success" data-toggle="modal" data-target="#addNewScanner">Add New</button>
+                <div class="modal fade" id="addNewScanner" tabindex="-1" role="dialog" aria-labelledby="addNewScannerTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="addNewScannerTitle">Add New Scanner</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <form>
+                                    <div class="form-row">
+                                        <div class="form-group col">
+                                            <label for="name">Name</label>
+                                            <input type="text" name="name" class="form-control">
+                                        </div>
+                                    </div>
+                                    <div class="form-row">
+                                        <div class="form-group col">
+                                            <label for="ipAddress">IP Address</label>
+                                            <input type="text" name="ipAddress" class="form-control">
+                                        </div>
+                                    </div>
+                                    <div class="form-row">
+                                        <div class="form-group col-6">
+                                            <label for="username">Username</label>
+                                            <input type="text" name="username" class="form-control">
+                                        </div>
+                                    </div>
+                                    <div class="form-row">
+                                        <div class="form-group col-6">
+                                            <label for="password">Password</label>
+                                            <input type="password" name="password" class="form-control">
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-success">Create new</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-offset-1 mr-5">
                 <button class="btn btn-dark">Filter</button>
             </div>
         </div>
