--- a/Views/scanners.ejs
+++ b/Views/scanners.ejs
@@ -17,8 +17,8 @@
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
-                            <div class="modal-body">
-                                <form>
+                            <form id="createNewScannerForm" action="/api/scanner" method="POST">
+                                <div class="modal-body">
                                     <div class="form-row">
                                         <div class="form-group col">
                                             <label for="name">Name</label>
@@ -43,12 +43,12 @@
                                             <input type="password" name="password" class="form-control">
                                         </div>
                                     </div>
-                                </form>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-success">Create new</button>
-                            </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
+                                    <button type="submit" class="btn btn-success">Create new</button>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
