--- a/Views/scanners.ejs
+++ b/Views/scanners.ejs
@@ -63,6 +63,9 @@
             </div>
         </div>
     </div>
+    <div class="loadingGif">
+        <img src="/static/images/ajax-loader.gif"/>
+    </div>
     <div id="scannerTable" class="table-responsive hidden">
         <table class="table table-hover">
             <thead>
