--- a/Views/partials/footer.ejs
+++ b/Views/partials/footer.ejs
@@ -1,6 +1,14 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+    <% if (typeof title != 'undefined') { %>
+        <% if (title === 'scanners') { %>
     <script src="/static/js/scanners.js" type="text/javascript"></script>
+        <% } %>
+        <% if (title === 'scans') { %>
+    <script src="/static/js/scans.js" type="text/javascript"></script>
+        <% } %>
+    <% } %>
 </body>
 </html>
