--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,7 +10,7 @@
                     <a class="nav-link" href="/vulnerabilities">Vulnerabilities</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/assets">Assets</a>
+                    <a class="nav-link" href="/hosts">Hosts</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMgmt" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
