--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,6 +9,9 @@
         <% if (title === 'scans') { %>
     <script src="/static/js/scans.js" type="text/javascript"></script>
         <% } %>
+        <% if (title === 'hosts') { %>
+    <script src="/static/js/hosts.js" type="text/javascript"></script>
+        <% } %>
     <% } %>
 </body>
 </html>
