Add sort by arrows.

--- a/views/scanners.ejs
+++ b/views/scanners.ejs
@@ -70,11 +70,11 @@
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th scope="col"><span class="text-nowrap">Scanner Name</span></th>
-                    <th scope="col"><span class="text-nowrap">IP Address</span></th>
-                    <th scope="col"><span class="text-nowrap">Status</span></th>
-                    <th scope="col"><span class="text-nowrap">Version</span></th>
-                    <th scope="col"><span class="text-nowrap">Type</span></th>
+                    <th scope="col"><span class="text-nowrap">Scanner Name <span class="fas fa-sort"></span></span></th>
+                    <th scope="col"><span class="text-nowrap">IP Address <span class="fas fa-sort"></span></span></th>
+                    <th scope="col"><span class="text-nowrap">Status <span class="fas fa-sort"></span></span></th>
+                    <th scope="col"><span class="text-nowrap">Version <span class="fas fa-sort"></span></span></th>
+                    <th scope="col"><span class="text-nowrap">Type <span class="fas fa-sort"></span></span></th>
                     <th scope="col"><span class="text-nowrap"></span></th>
                 </tr>
             </thead>
