--- a/views/scans.ejs
+++ b/views/scans.ejs
@@ -67,10 +67,10 @@
         <table class="table table-hover">
             <thead>
                 <tr>
-                    <th scope="col"><span class="text-nowrap">Scan Name</span></th>
-                    <th scope="col"><span class="text-nowrap">Scanner</span></th>
-                    <th scope="col"><span class="text-nowrap">Created</span></th>
-                    <th scope="col"><span class="text-nowrap">Modified</span></th>
+                    <th scope="col"><span class="text-nowrap">Scan Name <span class="fas fa-sort"></span></span></th>
+                    <th scope="col"><span class="text-nowrap">Scanner <span class="fas fa-sort"></span></span></th>
+                    <th scope="col"><span class="text-nowrap">Created <span class="fas fa-sort"></span></span></th>
+                    <th scope="col"><span class="text-nowrap">Modified <span class="fas fa-sort"></span></span></th>
                     <th scope="col"><span class="text-nowrap"></span></th>
                     <th scope="col"><span class="text-nowrap"></span></th>
                 </tr>
