--- a/views/hosts.ejs
+++ b/views/hosts.ejs
@@ -68,10 +68,10 @@
             <thead>
                 <tr>
                     <th scope="col"><span class="text-nowrap"><input type="checkbox"/></span></th>
-                    <th scope="col"><span class="text-nowrap">FQDN</span></th>
-                    <th scope="col"><span class="text-nowrap">Address</span></th>
-                    <th scope="col"><span class="text-nowrap">OS</span></th>
-                    <th scope="col"><span class="text-nowrap">Last Scan</span></th>
+                    <th scope="col"><span class="text-nowrap">FQDN <span class="fas fa-sort"></span></span></th>
+                    <th scope="col"><span class="text-nowrap">Address <span class="fas fa-sort"></span></span></th>
+                    <th scope="col"><span class="text-nowrap">OS <span class="fas fa-sort"></span></span></th>
+                    <th scope="col"><span class="text-nowrap">Last Scan <span class="fas fa-sort"></span></span></th>
                 </tr>
             </thead>
             <tbody id="hostsTableBody">
