--- a/views/hosts.ejs
+++ b/views/hosts.ejs
@@ -21,32 +21,28 @@
                                 <div class="modal-body">
                                     <div class="form-row">
                                         <div class="form-group col">
-                                            <label for="name">Name</label>
-                                            <input type="text" name="name" class="form-control">
+                                            <label for="fqdn">FQDN</label>
+                                            <input type="text" name="fqdn" class="form-control">
                                         </div>
                                     </div>
                                     <div class="form-row">
-                                        <div class="form-group col">
+                                        <div class="form-group col-4">
                                             <label for="ipAddress">IP Address</label>
                                             <input type="text" name="ipAddress" class="form-control">
                                         </div>
-                                    </div>
-                                    <div class="form-row">
-                                        <div class="form-group col-6">
-                                            <label for="username">Username</label>
-                                            <input type="text" name="username" class="form-control">
+                                        <div class="form-group col-4">
+                                            <label for="os">OS</label>
+                                            <input type="text" name="os" class="form-control">
                                         </div>
-                                    </div>
-                                    <div class="form-row">
-                                        <div class="form-group col-6">
-                                            <label for="password">Password</label>
-                                            <input type="password" name="password" class="form-control">
+                                        <div class="form-group col-4">
+                                            <label for="perPage">Results per Page</label>
+                                            <input type="number" min="1" max="100" name="perPage" class="form-control">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
-                                    <button type="submit" class="btn btn-success">Create new</button>
+                                    <button type="submit" class="btn btn-success">Apply</button>
                                 </div>
                             </form>
                         </div>
@@ -77,5 +73,11 @@
             <tbody id="hostsTableBody">
             </tbody>
         </table>
+    </div>
+    <div class="container mt-2-md mt-4-xs mr-2">
+        <nav>
+            <ul class="pagination justify-content-end hidden">
+            </ul>
+        </nav>
     </div>
 <%- include('partials/footer.ejs') -%>
