Create pagination and filtering for scans

--- a/views/hosts.ejs
+++ b/views/hosts.ejs
@@ -17,7 +17,7 @@
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
-                            <form id="filterHostsForm" action="/api/hosts" method="POST">
+                            <form id="filterHostsForm" action="/api/hosts" method="GET">
                                 <div class="modal-body">
                                     <div class="form-row">
                                         <div class="form-group col">
