--- a/views/scanners.ejs
+++ b/views/scanners.ejs
@@ -54,7 +54,53 @@
                 </div>
             </div>
             <div class="col-offset-1 mr-5">
-                <button class="btn btn-dark">Filter</button>
+                <button class="btn btn-dark" data-toggle="modal" data-target="#filterScanners">Filter</button>
+                <div class="modal fade" id="filterScanners" tabindex="-1" role="dialog" aria-labelledby="filterScannersTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="filterScannersTitle">Filter Scanners</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <form id="filterScannersForm" action="/api/scanners" method="GET">
+                                <div class="modal-body">
+                                    <div class="form-row">
+                                        <div class="form-group col">
+                                            <label for="name">Scanner Name</label>
+                                            <input type="text" name="scannerName" class="form-control">
+                                        </div>
+                                    </div>
+                                    <div class="form-row">
+                                        <div class="form-group col">
+                                            <label for="ipAddress">IP Address</label>
+                                            <input type="text" name="ipAddress" class="form-control">
+                                        </div>
+                                    </div>
+                                    <div class="form-row">
+                                        <div class="form-group col-6">
+                                            <label for="status">Status</label>
+                                            <select name="status" class="form-control">
+                                                <option disabled selected value>Choose an option</option>
+                                                <option value="offline">Offline</option>
+                                                <option value="ready">Ready</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group col-6">
+                                            <label for="perPage">Results per Page</label>
+                                            <input type="number" min="1" max="100" name="perPage" class="form-control">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
+                                    <button type="submit" class="btn btn-success">Apply</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row my-1">
@@ -81,5 +127,11 @@
             <tbody id="scannerTableBody">
             </tbody>
         </table>
+    </div>
+    <div class="container mt-2-md mt-4-xs mr-2">
+        <nav>
+            <ul class="pagination justify-content-end hidden">
+            </ul>
+        </nav>
     </div>
 <%- include('partials/footer.ejs') -%>
