--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,10 @@
 <%- include('partials/header.ejs') -%>
+
+    <% if (message.length > 0) { %>
+        <% message.forEach(function(m) { %>
+            <%= m %>
+        <% }); %>
+    <% } %>
     <div class="row justify-content-center h-100">
         <div class="col-xl-3 col-lg-4 col-md-5 col-sm-6 col-xs-6 align-self-center">
             <div class="card text-center">
@@ -6,12 +12,12 @@
                     <h5>Multitude</h5>
                 </div>
                 <div class="card-body">
-                    <form>
+                    <form action="/login" method="POST">
                         <div class="form-group">
                             <input type="text" name="username" placeholder="username"/>
                         </div>
                         <div class="form-group">
-                            <input type="text" name="password" placeholder="password"/>
+                            <input type="password" name="password" placeholder="password"/>
                         </div>
                         <button type="submit" class="btn btn-dark">Login</button>
                     </form>
