--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,26 @@
 <%- include('partials/header.ejs') -%>
 
     <% if (message.length > 0) { %>
-        <% message.forEach(function(m) { %>
-            <%= m %>
-        <% }); %>
+        <div class="modal fade" id="failedLogin" role="dialog">
+            <div class="modal-dialog model-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title">Login Failed</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                    <% message.forEach(function(m) { %>
+                        <p><%= m %></p>
+                    <% }); %>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
     <% } %>
     <div class="row justify-content-center h-100">
         <div class="col-xl-3 col-lg-4 col-md-5 col-sm-6 col-xs-6 align-self-center">
