--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -18,6 +18,9 @@
         <% if (title === 'vulnerabilities') { %>
     <script src="/static/js/vulnerabilities.js" type="text/javascript"></script>
         <% } %>
+        <% if (title === 'login') { %>
+    <script src="/static/js/login.js" type="text/javascript"></script>
+        <% } %>
     <% } %>
 </body>
 </html>
